--- a/usr/share/octopussy/HELP/en/user_prefs.html
+++ b/usr/share/octopussy/HELP/en/user_prefs.html
@@ -9,7 +9,7 @@ Here you can set your User Preferences.<br>
 <div align="center"><img src="../IMG/octo_user_preferences.png"></div>
 <div align="center"><i><font size="-1">User Preferences Box</font></i></div>
 <br>
-You can change your Password <img src="../IMG/bt_locked.png" border="0">, your Language <img src="../IMG/bt_keyboard_layout.png" border="0"> and your Theme <img src="../IMG/bt_theme.png" border="0">.<br><br>
+You can change your <b>Password</b> <img src="../IMG/bt_locked.png" border="0">, your <b>Language</b> <img src="../IMG/bt_keyboard_layout.png" border="0">, your <b>Theme</b> <img src="../IMG/bt_theme.png" border="0"> and the way your <b>Menu</b> <img src="../IMG/bt_menu_config.png" border="0"> looks.<br><br>
 If your language is not supported, feel free to contribute !<br>
 If you want to improve Theme, you can contribute as well !<br>
 More information in <a href="contribution.html">Contribution</a> page.
