Bugfix the "!defined *::Filename" bug & minor updates

--- a/usr/share/octopussy/HELP/en/internals.html
+++ b/usr/share/octopussy/HELP/en/internals.html
@@ -23,7 +23,7 @@ Logs are stored in the Device Incoming Logs Directory.<br>
 </ol>
 
 You can change Default Storages Locations in <a href="./storages.html"><img src="../IMG/bt_storage.png" border="0"> Storages</a> page and <a href="./devices.html#device_storages"><img src="../IMG/bt_device.png" border="0"><img src="../IMG/bt_storage.png" border="0"> Device Storages</a> page.<br>
-By default, these locations are <i>/var/lib/octopussy/logs/</i><br>
+By default, these locations are <b><i>/var/lib/octopussy/logs/</i></b><br>
 
 </body>
 </html>
