--- a/usr/share/octopussy/HELP/en/alerts.html
+++ b/usr/share/octopussy/HELP/en/alerts.html
@@ -24,11 +24,11 @@ Alerts will be colored respectively in <font color="orange">Orange</font> and <f
 <br>
 In '<b>Subject</b>' and '<b>Body</b>' fields, you can add some predefined words:
 <ul>
-<li>__device__ will be replaced by the device that sends log that raise this alert.</li>
-<li>__alert__ will be replaced by the alert name of this alert.</li>
-<li>__level__ will be replaced by the alert level of this alert.</li>
-<li>__log__ will be replaced by the log line that raise this alert.</li>
-<li>__field_<i>fieldname</i>__ will be replaced by the value of the field 'fieldname' of the log line.</li>
+<li><b>__device__</b> will be replaced by the device that sends log that raise this alert.</li>
+<li><b>__alert__</b> will be replaced by the alert name of this alert.</li>
+<li><b>__level__</b> will be replaced by the alert level of this alert.</li>
+<li><b>__log__</b> will be replaced by the log line that raise this alert.</li>
+<li><b>__field_<i>fieldname</i>__</b> will be replaced by the value of the field 'fieldname' of the log line.</li>
 </ul>
 </body>
 </html>
