Work on Search Templates

--- a/usr/share/octopussy/HELP/en/alerts.html
+++ b/usr/share/octopussy/HELP/en/alerts.html
@@ -5,12 +5,12 @@
 <body>
 <h1><img src="../IMG/bt_alert.png" border="0"> Alerts</h1>
 Here you can configure your Alerts.<br> 
-On this page, you can <img src="../IMG/bt_edit.png"> Edit, <img src="../IMG/bt_remove.png"> Remove or Create a new Alert by clicking on '<b>Dynamic Alert Creation</b>' link.<br>
+On this page, you can <img src="../IMG/bt_edit.png"> Edit, <img src="../IMG/bt_remove.png"><b>Remove</b> or Create a new Alert by clicking on '<b>Dynamic Alert Creation</b>' link.<br>
 <br>
 <div align="center"><img src="../IMG/octo_alerts_list.png"></div>
 <div align="center"><i><font size="-1">Alerts List</font></i></div>
 <br>
-Every time you will <img src="../IMG/bt_remove.png"> remove an Alert, a dialog window will ask you to confirm.<br>
+Every time you will <img src="../IMG/bt_remove.png"><b>remove</b> an Alert, a dialog window will ask you to confirm.<br>
 <br>
 <div align="center"><img src="../IMG/octo_alerts_dialog_delete.png"></div>
 <div align="center"><i><font size="-1">Dialog Window Confirmation</font></i></div>
