--- a/usr/share/octopussy/HELP/en/devicegroups.html
+++ b/usr/share/octopussy/HELP/en/devicegroups.html
@@ -10,7 +10,7 @@ DeviceGroups are used in <a href="./alerts.html"><img src="../IMG/bt_alert.png" 
 <div align="center"><img src="../IMG/octo_devicegroups_list.png"></div>
 <div align="center"><i><font size="-1">DeviceGroups List</font></i></div>
 <br>
-Every time you will <img src="../IMG/bt_remove.png"> remove a DeviceGroup, a dialog window will ask you to confirm.<br>
+Every time you will <img src="../IMG/bt_remove.png"><b>remove</b> a DeviceGroup, a dialog window will ask you to confirm.<br>
 <br>
 <div align="center"><img src="../IMG/octo_devicegroup_dialog_delete.png"></div>
 <div align="center"><i><font size="-1">Dialog Window Confirmation</font></i></div>
