--- a/usr/share/octopussy/HELP/en/devices.html
+++ b/usr/share/octopussy/HELP/en/devices.html
@@ -12,7 +12,7 @@ Here you can:
 <li>modify <img src="../IMG/bt_storage.png"> Storages locations associated to this Device</li> 
 <li><img src="../IMG/bt_edit.png"> edit information about this Device</li>
 <li>show <img src="../IMG/bt_report.png"> Dashboard about this Device</li>
-<li><img src="../IMG/bt_remove.png"> remove one Device</li>
+<li><img src="../IMG/bt_remove.png"><b>remove</b> one Device</li>
 <li>change parsing state: <img src="../IMG/bt_start.png"> Start, <img src="../IMG/bt_pause.png"> Pause or <img src="../IMG/bt_stop.png"> Stop</li>
 </ul>
 <br>
@@ -23,7 +23,7 @@ Here you can:
 <div align="center"><img src="../IMG/octo_device_new.png"></div>
 <div align="center"><i><font size="-1">New Device Box</font></i></div>
 <br>
-Every time you will <img src="../IMG/bt_remove.png"> remove a Device, a dialog window will ask you to confirm.<br>
+Every time you will <img src="../IMG/bt_remove.png"><b>remove</b> a Device, a dialog window will ask you to confirm.<br>
 <br>
 <div align="center"><img src="../IMG/octo_device_dialog_delete.png"></div>
 <div align="center"><i><font size="-1">Dialog Window Confirmation</font></i></div>
