--- a/usr/share/octopussy/HELP/en/locations.html
+++ b/usr/share/octopussy/HELP/en/locations.html
@@ -11,7 +11,7 @@ It could be useful to create dynamic <a href="./devicegroups.html"><img src="../
 <div align="center"><img src="../IMG/octo_locations_list.png"></div>
 <div align="center"><i><font size="-1">Locations List</font></i></div>
 <br>
-Every time you will <img src="../IMG/bt_remove.png"> remove a Location, a dialog window will ask you to confirm.<br>
+Every time you will <img src="../IMG/bt_remove.png"><b>remove</b> a Location, a dialog window will ask you to confirm.<br>
 <br>
 <div align="center"><img src="../IMG/octo_location_dialog_delete.png"></div>
 <div align="center"><i><font size="-1">Dialog Window Confirmation</font></i></div>
