--- a/usr/share/octopussy/HELP/en/messages.html
+++ b/usr/share/octopussy/HELP/en/messages.html
@@ -10,7 +10,7 @@
 <div align="center"><img src="../IMG/octo_messages_list.png"></div>
 <div align="center"><i><font size="-1">Messages List</font></i></div>
 <br>
-Every time you will <img src="../IMG/bt_remove.png"> remove a Message, a dialog window will ask you to confirm.<br>
+Every time you will <img src="../IMG/bt_remove.png"><b>remove</b> a Message, a dialog window will ask you to confirm.<br>
 <br>
 <div align="center"><img src="../IMG/octo_messages_dialog_delete.png"></div>
 <div align="center"><i><font size="-1">Dialog Window Confirmation</font></i></div>
