--- a/usr/share/octopussy/HELP/en/storages.html
+++ b/usr/share/octopussy/HELP/en/storages.html
@@ -21,12 +21,12 @@ More information on logs archiving can be found in <a href="./internals.html">Oc
 <div align="center"><img src="../IMG/octo_storages_default.png"></div>
 <div align="center"><i><font size="-1">Storages Default Box</font></i></div>
 <br>
-In the bottom of the page, you can create or <img src="../IMG/bt_remove.png"> remove a Storage.<br>
+In the bottom of the page, you can create or <img src="../IMG/bt_remove.png"><b>remove</b> a Storage.<br>
 <br>
 <div align="center"><img src="../IMG/octo_storages_list.png"></div>
 <div align="center"><i><font size="-1">Storages List</font></i></div>
 <br>
-Every time you will <img src="../IMG/bt_remove.png"> remove a Storage, a dialog window will ask you to confirm.<br>
+Every time you will <img src="../IMG/bt_remove.png"><b>remove</b> a Storage, a dialog window will ask you to confirm.<br>
 <br>
 <div align="center"><img src="../IMG/octo_storage_dialog_delete.png"></div>
 <div align="center"><i><font size="-1">Dialog Window Confirmation</font></i></div>
