--- a/usr/share/octopussy/HELP/en/tables.html
+++ b/usr/share/octopussy/HELP/en/tables.html
@@ -15,13 +15,13 @@ Tables are <b>ONLY</b> used during <img src="../IMG/bt_report.png" border="0"> R
 <div align="center"><img src="../IMG/octo_table_new.png"></div>
 <div align="center"><i><font size="-1">New Table Box</font></i></div>
 <br>
-Every time you will <img src="../IMG/bt_remove.png"> remove a Table, a dialog window will ask you to confirm.<br>
+Every time you will <img src="../IMG/bt_remove.png"><b>remove</b> a Table, a dialog window will ask you to confirm.<br>
 <br>
 <div align="center"><img src="../IMG/octo_table_dialog_delete.png"></div>
 <div align="center"><i><font size="-1">Dialog Window Confirmation</font></i></div>
 If you click on Table name or create a new one with the '<b>New Table Box</b>',<br>
 you will be redirected to the '<b>Table Fields List</b>' page.<br>
-Here you can add or <img src="../IMG/bt_remove.png"> remove a field.<br>
+Here you can add or <img src="../IMG/bt_remove.png"><b>remove</b> a field.<br>
 <br>
 <div align="center"><img src="../IMG/octo_table_fields.png"></div>
 <div align="center"><i><font size="-1">Table Fields List</font></i></div>
