--- a/usr/share/octopussy/HELP/en/contacts.html
+++ b/usr/share/octopussy/HELP/en/contacts.html
@@ -12,8 +12,8 @@ On the top of this page, you can see all your Contacts list (Local & LDAP).<br>
 <div align="center"><i><font size="-1">Contacts List</font></i></div>
 <br>
 To disable or enable LDAP Contacts, go to <a href="./system_config.html"><img src="../IMG/bt_config.png" border="0"><b><i>'System Configuration'</I></b></a>.<br>
-Of course, you can only <img src="../IMG/bt_remove.png"> remove Contacts defined locally in Octopussy.<br>
-Every time you will <img src="../IMG/bt_remove.png"> remove a Contact, a dialog window will ask you to confirm.<br>
+Of course, you can only <img src="../IMG/bt_remove.png"><b>remove</b> Contacts defined locally in Octopussy.<br>
+Every time you will <img src="../IMG/bt_remove.png"><b>remove</b> a Contact, a dialog window will ask you to confirm.<br>
 <br>
 <div align="center"><img src="../IMG/octo_contacts_dialog_remove.png"></div>
 <div align="center"><i><font size="-1">Dialog Window Confirmation</font></i></div>
