--- a/usr/share/octopussy/HELP/en/system_config.html
+++ b/usr/share/octopussy/HELP/en/system_config.html
@@ -5,13 +5,13 @@
 <body>
 <h1><img src="../IMG/bt_config.png"> System Configuration</h1>
 Here you can set everything related to Octopussy System Configuration.<br>
-For each configuration, it will show if the connection is <img src="../IMG/bt_msg_ok.png"> ok or <img src="../IMG/bt_msg_critical.png"> not.<br>
+For each configuration, it will show if the connection is <img src="../IMG/bt_msg_ok.png"><b>ok</b> or <img src="../IMG/bt_msg_critical.png"><b>not</b>.<br>
 
 <h2>Backup & Restore</h2>
 <div align="center"><img src="../IMG/octo_system_config_backup.png" border="0"></div>
 <div align="center"><i><font size="-1">System Backup/Restore Box</font></i></div><br>
 
-If you want to make a backup of your configuration, click on the <img src="../IMG/bt_backup.png"> <b>Backup</b> button.<br>
+If you want to make a backup of your configuration, click on the <img src="../IMG/bt_backup.png"><b>Backup</b> button.<br>
 It will backup your configuration on the Octopussy server and will open a dialog box to save it localy.<br>
 The Backup contains:
 <ul>
@@ -33,7 +33,7 @@ The Backup contains:
 </ul>
 <br>
 
-If you want to restore an old configuration, select your old configuration from the right list and click on the <img src="../IMG/bt_restore.png"> <b>Restore</b> button.<br>
+If you want to restore an old configuration, select your old configuration from the right list and click on the <img src="../IMG/bt_restore.png"><b>Restore</b> button.<br>
 Every time you will restore a configuration, a dialog window will ask you to confirm.<br>
 <br>
 
