--- a/usr/share/octopussy/HELP/en/alerts.html
+++ b/usr/share/octopussy/HELP/en/alerts.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+<link rel="icon" type="image/png" href="../IMG/bt_alert.png">
 <title>Octopussy Help: Alerts</title>
 </head>
 <body>
