--- a/usr/share/octopussy/HELP/en/contacts.html
+++ b/usr/share/octopussy/HELP/en/contacts.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+<link rel="icon" type="image/png" href="../IMG/bt_contact.png">
 <title>Octopussy Help: Contacts</title>
 </head>
 <body>
