--- a/usr/share/octopussy/HELP/en/devices.html
+++ b/usr/share/octopussy/HELP/en/devices.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+<link rel="icon" type="image/png" href="../IMG/bt_device.png">
 <title>Octopussy Help: Devices</title>
 </head>
 <body>
