--- a/usr/share/octopussy/HELP/en/messages.html
+++ b/usr/share/octopussy/HELP/en/messages.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+<link rel="icon" type="image/png" href="../IMG/bt_messages.png">
 <title>Octopussy Help: Messages</title>
 </head>
 <body>
