--- a/usr/share/octopussy/HELP/en/services.html
+++ b/usr/share/octopussy/HELP/en/services.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+<link rel="icon" type="image/png" href="../IMG/bt_service.png">
 <title>Octopussy Help: Services</title>
 </head>
 <body>
