--- a/usr/share/octopussy/HELP/en/storages.html
+++ b/usr/share/octopussy/HELP/en/storages.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+<link rel="icon" type="image/png" href="../IMG/bt_storage.png">
 <title>Octopussy Help: Storages</title>
 </head>
 <body>
