--- a/usr/share/octopussy/HELP/en/system_config.html
+++ b/usr/share/octopussy/HELP/en/system_config.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+<link rel="icon" type="image/png" href="../IMG/bt_config.png">
 <title>Octopussy Help: System Configuration</title>
 </head>
 <body>
