--- a/usr/share/octopussy/HELP/en/tables.html
+++ b/usr/share/octopussy/HELP/en/tables.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+<link rel="icon" type="image/png" href="../IMG/bt_table.png">
 <title>Octopussy Help: Tables</title>
 </head>
 <body>
