--- a/usr/share/octopussy/HELP/en/user_prefs.html
+++ b/usr/share/octopussy/HELP/en/user_prefs.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+<link rel="icon" type="image/png" href="../IMG/bt_user_prefs.png">
 <title>Octopussy Help: User Preferences</title>
 </head>
 <body>
@@ -11,7 +12,7 @@ Here you can set your User Preferences.<br>
 <br>
 You can change your <b>Password</b> <img src="../IMG/bt_locked.png" border="0">, your <b>Language</b> <img src="../IMG/bt_keyboard_layout.png" border="0">, your <b>Theme</b> <img src="../IMG/bt_theme.png" border="0"> and the way your <b>Menu</b> <img src="../IMG/bt_menu_config.png" border="0"> looks.<br><br>
 If your language is not supported, feel free to contribute !<br>
-If you want to improve Theme, you can contribute as well !<br>
+If you want to improve Themes, you can contribute as well !<br>
 More information in <a href="contribution.html">Contribution</a> page.
 </body>
 </html>
