--- a/usr/share/octopussy/HELP/en/internals.html
+++ b/usr/share/octopussy/HELP/en/internals.html
@@ -7,13 +7,13 @@
 <h2>How Octopussy handles logs</h2>
 <ol>
 
-<li><b>syslog-ng</b> receives syslog messages and forward them to <b>octo_dispatcher</b></li>
+<li><b>syslog-ng</b> receives syslog messages and forward them to <b>octo_dispatcher</b>.</li>
 
-<li><b>octo_dispatcher</b> receives syslog messages and sort them by Device</li>
+<li><b>octo_dispatcher</b> receives syslog messages and sort them by Device.</li>
 Logs are stored in the Device Incoming Logs Directory.<br>
 (<b>/<i>DEFAULT_STORAGE_INCOMING</i>/<i>devicename</i>/Incoming/YYYY/MM/DD/msg_HHhMM.log</b>)<br>
 
-<li>one <b>octo_parser</b> by Device handle messages and sort them by Service</li>
+<li>one <b>octo_parser</b> by Device handle messages and sort them by Service.</li>
 	<ul>
 	<li>Logs that have been recognized are stored and zipped in the Device Known Logs Directory.</li>
 	(<b>/<i>DEFAULT_STORAGE_KNOWN</i>/<i>devicename</i>/<i>servicename</i>/YYYY/MM/DD/msg_HHhMM.log.gz</b>)<br>
@@ -23,7 +23,7 @@ Logs are stored in the Device Incoming Logs Directory.<br>
 </ol>
 
 You can change Default Storages Locations in <a href="./storages.html"><img src="../IMG/bt_storage.png" border="0"> Storages</a> page and <a href="./devices.html#device_storages"><img src="../IMG/bt_device.png" border="0"><img src="../IMG/bt_storage.png" border="0"> Device Storages</a> page.<br>
-By default, these locations are <b><i>/var/lib/octopussy/logs/</i></b><br>
+By default, these locations are <b><i>/var/lib/octopussy/logs/</i></b>.<br>
 
 </body>
 </html>
