--- a/usr/share/octopussy/HELP/en/locations.html
+++ b/usr/share/octopussy/HELP/en/locations.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+<link rel="icon" type="image/png" href="../IMG/bt_home.png">
 <title>Octopussy Help: Locations</title>
 </head>
 <body>
