--- a/usr/share/octopussy/HELP/en/login.html
+++ b/usr/share/octopussy/HELP/en/login.html
@@ -8,6 +8,6 @@
 <div align="center"><i><font size="-1">Login Box</font></i></div>
 <br>
 By default, you can login to Octopussy with login "<b>admin</b>" and password "<b>admin</b>".<br>
-You can change your password, language and interface theme in <a href="./user_prefs.html"><img src="../IMG/bt_user_prefs.png" border="0"><b><i>'User Preferences'</i></b></a>.
+You can change your password, language and interface theme in <a href="./user_prefs.html"><img src="../IMG/bt_user_prefs.png" border="0">'User Preferences'</a>.
 </body>
 </html>
