--- a/usr/share/octopussy/HELP/en/users.html
+++ b/usr/share/octopussy/HELP/en/users.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+<link rel="icon" type="image/png" href="../IMG/bt_users.png">
 <title>Octopussy Help: Users</title>
 </head>
 <body>
@@ -10,7 +11,7 @@ On this page, you can see all your Users list.<br>
 <div align="center"><img src="../IMG/octo_users_list.png"></div>
 <div align="center"><i><font size="-1">Users List</font></i></div>
 <br>
-To disable or enable LDAP Users, go to <a href="./system_config.html"><img src="../IMG/bt_config.png" border="0"><b><i>'System Configuration'</I></b></a>.<br>
+To disable or enable LDAP Users, go to <a href="./system_config.html"><img src="../IMG/bt_config.png" border="0"><b><i>'System Configuration'</i></b></a>.<br>
 Of course, you can only <img src="../IMG/bt_remove.png"><b>remove</b> Users defined locally in Octopussy.<br>
 Every time you will <img src="../IMG/bt_remove.png"><b>remove</b> a User, a dialog window will ask you to confirm.<br>
 <br>
