Lot of Work on WebUI

--- a/usr/share/octopussy/HELP/en/contacts.html
+++ b/usr/share/octopussy/HELP/en/contacts.html
@@ -7,23 +7,17 @@
 <h1><img src="../IMG/bt_contact.png" border="0"> Contacts</h1>
 Here you can configure your Contacts.<br> 
 Contacts are used to send <a href="./alerts.html"><img src="../IMG/bt_alert.png" border="0"> Alerts</a> and <img src="../IMG/bt_report.png" border="0"> Reports by Email and Instant Message.<br><br>
-On the top of this page, you can see all your Contacts list (Local & LDAP).<br>
+On this page, you can see all your Contacts list (Local & LDAP) and add new.<br>
 <br>
 <div align="center"><img src="../IMG/octo_contacts_list.png"></div>
 <div align="center"><i><font size="-1">Contacts List</font></i></div>
 <br>
+You need at least to fill the '<b>ID</b>' and '<b>Email</b>' or '<b>IM</b>'(Instant Messaging) fields to have a valid Contact.<br>
 To disable or enable LDAP Contacts, go to <a href="./system_config.html"><img src="../IMG/bt_config.png" border="0"><b><i>'System Configuration'</I></b></a>.<br>
 Of course, you can only <img src="../IMG/bt_remove.png"><b>remove</b> Contacts defined locally in Octopussy.<br>
 Every time you will <img src="../IMG/bt_remove.png"><b>remove</b> a Contact, a dialog window will ask you to confirm.<br>
 <br>
 <div align="center"><img src="../IMG/octo_contacts_dialog_remove.png"></div>
 <div align="center"><i><font size="-1">Dialog Window Confirmation</font></i></div>
-<br>
-On the bottom of this page, you can add a new Contact.<br>
-<br>
-<div align="center"><img src="../IMG/octo_contacts_new.png"></div>
-<div align="center"><i><font size="-1">New Contact Box</font></i></div>
-<br>
-You need at least to fill the '<b>ID</b>' and '<b>Email</b>' or '<b>IM</b>'(Instant Messaging) fields to have a valid Contact.<br>
 </body>
 </html>
