--- a/usr/share/octopussy/HELP/en/devicegroups.html
+++ b/usr/share/octopussy/HELP/en/devicegroups.html
@@ -6,7 +6,7 @@
 <body>
 <h1><img src="../IMG/bt_device.png" border="0"> DeviceGroups</h1>
 Here you can configure your DeviceGroups.<br> 
-DeviceGroups are used in <a href="./alerts.html"><img src="../IMG/bt_alert.png" border="0"> Alerts</a> / <img src="../IMG/bt_report.png" border="0"> Reports creation and <img src="../IMG/bt_search.png" border="0"> Logs Viewers to handle more than one Device in one shot.<br>
+DeviceGroups are used in <a href="./alerts.html"><img src="../IMG/bt_alert.png" border="0"> Alerts</a> / <img src="../IMG/bt_report.png" border="0"> Reports creation and <img src="../IMG/bt_search.png" border="0"> Logs Viewer to handle more than one Device in one shot.<br>
 <br>
 <div align="center"><img src="../IMG/octo_devicegroups_list.png"></div>
 <div align="center"><i><font size="-1">DeviceGroups List</font></i></div>
