SourceForge Tracker references removed [Close #553]

--- a/usr/share/octopussy/HELP/en/contribution.html
+++ b/usr/share/octopussy/HELP/en/contribution.html
@@ -14,7 +14,7 @@ You can contribute to Octopussy in many ways:
 </ul>
 
 <h2>Bug Report/Feature Request</h2>
-You can submit Bug Report/Feature Request directly from <img src="../IMG/bt_bug.png" border="0"><b><i>'Support Request'</i></b> or from the <a href="http://sourceforge.net/tracker/?group_id=154314">Octopussy Sourceforge Tracker</a> page.
+You can submit Bug Report/Feature Request directly from <img src="../IMG/bt_bug.png" border="0"><b><i>'Support Request'</i></b> or from the <a href="https://github.com/sebthebert/Octopussy/issues">Octopussy GitHub Issues</a> page.
 
 <h2>Create/Update Service/Report</h2>
 You can submit your Service/Report creation/update directly from <img src="../IMG/bt_bug.png" border="0"><b><i>'Support Request'</i></b> or send your files to <B>octo.devel@gmail.com</b>.
